--- a/conf/zonelist.xml.in
+++ b/conf/zonelist.xml.in
@@ -41,8 +41,7 @@ file by using the command:
 -->
 <!--
 	<Zone name="example.net">
-		<Policy>default</Policy>
-		<SignerConfiguration>@OPENDNSSEC_STATE_DIR@/signconf/example.net.xml</SignerConfiguration>
+		<PassThrough/>
 		<Adapters>
 			<Input>
 				<Adapter type="DNS">@OPENDNSSEC_CONFIG_DIR@/addns.xml</Adapter>
