--- a/signzone/src/Makefile.am
+++ b/signzone/src/Makefile.am
@@ -2,10 +2,13 @@ MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 
 LIBHSM = ${top_builddir}/libhsm/src/lib/libhsm.a
 LIBCOMPAT = ${top_builddir}/common/libcompat.a
+LIBUTIL = ${top_builddir}/libutil/libutil.a
 
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/common \
 	-I$(top_builddir)/common \
+	-I$(top_srcdir)/libutil \
+	-I$(top_builddir)/libutil \
 	-I$(top_srcdir)/libhsm/src/lib \
 	@SSL_INCLUDES@ \
 	@XML2_INCLUDES@ \
@@ -20,4 +23,5 @@ ods_signzone_SOURCES=		ods-signzone.c
 
 ods_signzone_LDADD=		$(LIBHSM)
 ods_signzone_LDADD+=		$(LIBCOMPAT)
+ods_signzone_LDADD+=		$(LIBUTIL)
 ods_signzone_LDADD+=		@LDNS_LIBS@ @XML2_LIBS@ @PTHREAD_LIBS@ @RT_LIBS@ @SSL_LIBS@ @C_LIBS@
