--- a/signzone/src/Makefile.in
+++ b/signzone/src/Makefile.in
@@ -87,7 +87,7 @@ am__installdirs = "$(DESTDIR)$(sbindir)"
 PROGRAMS = $(sbin_PROGRAMS)
 am_ods_signzone_OBJECTS = ods-signzone.$(OBJEXT)
 ods_signzone_OBJECTS = $(am_ods_signzone_OBJECTS)
-ods_signzone_DEPENDENCIES = $(LIBHSM) $(LIBCOMPAT)
+ods_signzone_DEPENDENCIES = $(LIBHSM) $(LIBCOMPAT) $(LIBUTIL)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/common
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -313,9 +313,12 @@ top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 LIBHSM = ${top_builddir}/libhsm/src/lib/libhsm.a
 LIBCOMPAT = ${top_builddir}/common/libcompat.a
+LIBUTIL = ${top_builddir}/libutil/libutil.a
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/common \
 	-I$(top_builddir)/common \
+	-I$(top_srcdir)/libutil \
+	-I$(top_builddir)/libutil \
 	-I$(top_srcdir)/libhsm/src/lib \
 	@SSL_INCLUDES@ \
 	@XML2_INCLUDES@ \
@@ -324,8 +327,9 @@ AM_CPPFLAGS = \
 signzonedir = @libdir@/opendnssec/signzone
 # man8_MANS =     man/ods-signzone.8
 ods_signzone_SOURCES = ods-signzone.c
-ods_signzone_LDADD = $(LIBHSM) $(LIBCOMPAT) @LDNS_LIBS@ @XML2_LIBS@ \
-	@PTHREAD_LIBS@ @RT_LIBS@ @SSL_LIBS@ @C_LIBS@ $(am__empty)
+ods_signzone_LDADD = $(LIBHSM) $(LIBCOMPAT) $(LIBUTIL) @LDNS_LIBS@ \
+	@XML2_LIBS@ @PTHREAD_LIBS@ @RT_LIBS@ @SSL_LIBS@ @C_LIBS@ \
+	$(am__empty)
 all: all-am
 
 .SUFFIXES:
